@@ -10,6 +10,7 @@ Improved sprite viewer: you can view sprites up to 512x512
 Improved disassemble window: 
 *now you can export the disassemble to text file
 *you can now see the full opcode when debugging Sinclair QL
+*you can now show/hide hexadecimal dump of every opcode
 Fixed visual glitches in some menus when Pentagon machine and real video: audio wave, visualmem, ay piano, wave piano, view sprites
 Fixed visual glitches in some menus when interlaced enabled: audio wave, visualmem, ay piano, wave piano, view sprites
 Fixed audio bug: sending a sample to the DAC by using Next registers, it wasn’t reseting the silence detection counter, so sound would probably be frozen (and repeated again, and again...)
